--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.jsp
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://iwayqdb.cmeqvyk8zpec.us-east-1.rds.amazonaws.com:3306/UserDB
+spring.datasource.url = jdbc:mysql://dbfortomcat.ccuwmxvz6arp.us-west-2.rds.amazonaws.com:3306/UserDB
 
 # Username and password
 spring.datasource.username = admin
-spring.datasource.password = admin
+spring.datasource.password = password
