--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.krishna</groupId>
 	<artifactId>MyWebApp</artifactId>
-	<version>release-$TAGVERSIONS</version>
+	<version>$TAGVERSIONS</version>
 	<packaging>war</packaging>
 	<name>MyWebApp</name>
 	<description>Demo project for Spring Boot</description>
